@@ -54,6 +54,7 @@ struct bu_cmdtab {
     int (*ct_func)(void *data, int argc, const char *argv[]);
 };
 
+/* deprecated 2016-01-14 */
 struct bu_cmdhist {
     struct bu_list l;
     struct bu_vls h_command;
@@ -63,6 +64,7 @@ struct bu_cmdhist {
 };
 #define BU_CMDHIST_NULL (struct bu_cmdhist *)NULL
 
+/* deprecated 2016-01-14 */
 struct bu_cmdhist_obj {
     struct bu_list l;
     struct bu_vls cho_name;
@@ -100,7 +102,7 @@ BU_EXPORT extern int bu_cmd(const struct bu_cmdtab *cmds, int argc, const char *
  * USAGE:
  * history [-delays] [-outfile filename]
  */
-BU_EXPORT extern int bu_cmdhist_history(void *data, int argc, const char **argv);
+DEPRECATED BU_EXPORT extern int bu_cmdhist_history(void *data, int argc, const char **argv);
 
 /**
  * Add a command to the history list.
@@ -108,7 +110,7 @@ BU_EXPORT extern int bu_cmdhist_history(void *data, int argc, const char **argv)
  * USAGE:
  * procname add cmd
  */
-BU_EXPORT extern int bu_cmdhist_add(void *data, int argc, const char **argv);
+DEPRECATED BU_EXPORT extern int bu_cmdhist_add(void *data, int argc, const char **argv);
 
 /**
  * Return the current command.
@@ -116,7 +118,7 @@ BU_EXPORT extern int bu_cmdhist_add(void *data, int argc, const char **argv);
  * USAGE:
  * procname curr
  */
-BU_EXPORT extern int bu_cmdhist_curr(void *data, int argc, const char **argv);
+DEPRECATED BU_EXPORT extern int bu_cmdhist_curr(void *data, int argc, const char **argv);
 
 /**
  * Set the current command to the next command.
@@ -124,7 +126,7 @@ BU_EXPORT extern int bu_cmdhist_curr(void *data, int argc, const char **argv);
  * USAGE:
  * procname next
  */
-BU_EXPORT extern int bu_cmdhist_next(void *data, int argc, const char **argv);
+DEPRECATED BU_EXPORT extern int bu_cmdhist_next(void *data, int argc, const char **argv);
 
 /**
  * Set the current command to the previous command.
@@ -132,7 +134,7 @@ BU_EXPORT extern int bu_cmdhist_next(void *data, int argc, const char **argv);
  * USAGE:
  * procname prev
  */
-BU_EXPORT extern int bu_cmdhist_prev(void *data, int argc, const char **argv);
+DEPRECATED BU_EXPORT extern int bu_cmdhist_prev(void *data, int argc, const char **argv);
 
 __END_DECLS
 
